# wheat-esp-tools

./: .gitignore  LICENSE  README-EN.md  README.md  e -iq  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/scripts/: build-latest-json.mjs  publish-to-update-platform.mjs  rename-release-assets.mjs  upload-to-update-platform.mjs
.github/workflows/: ci.yml  release-windows.yml  release.yml
read_flash/: index.js  package.json
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  chip.list.json  tauri.conf.json  tools.config.json
src-tauri/capabilities/: migrated.json  pet.json
src-tauri/icons/: icon.icns
src-tauri/partitions/: temp.csv
src-tauri/src/: classic_bluetooth.rs  main.rs  window_state.rs
src-tauri/src/espflash_ops/: connect.rs  merge.rs  mod.rs  progress.rs  types.rs
src-tauri/src/image/: mod.rs
src-tauri/src/image/eaf/: mod.rs
src-tauri/src/image/gifcompress/: mod.rs
src-tauri/src/mmap/: mod.rs
src-tauri/src/serial/: mod.rs  port_info.rs  win_ports.rs
src-tauri/tools/: gen_esp32part.py
src/assets/css/: style.css
src/bus/: terminal.ts
src/components/: Container.vue  DeviceTopBar.vue  EspflashProgressBar.vue  FirmwareList.vue  HistoryPath.vue  LanguageSwitch.vue  List.vue  PartitionCharts.vue  PlaceholderHint.vue  Popup.vue  SPIMode.vue  SerialPortDetailsPopover.vue  SerialPortSelect.vue  SimpleToolList.vue  SplashScreen.vue  Terminal.vue  ToolList copy 2.vue  ToolList copy.vue  ToolList.vue  Upload.vue  common.ts  store.ts
src/components/icons/: MenuIcon.vue
src/components/tools/: A0001.vue  List.vue  SPIMode.vue  Upload.vue  Wheat Serial.vue  model.ts  分区表.vue  分区表计算.vue  合并build目录的固件.vue  合并多个固件.vue  合并或烧录固件.vue  合并自定义地址固件.vue  基本功能.vue  擦除固件.vue  烧录build目录的固件.vue  烧录固件到指定地址.vue  烧录地址为0x0的固件.vue  烧录多个固件.vue  烧录或合并build目录的固件.vue  烧录或合并固件.vue  获取flash大小.vue  读取固件.vue
src/composables/: useAppSplash.ts  useDeviceInfoDisplay.ts  useFlashOptions.ts  useMenuNavigation.ts  useTauriDragDrop.ts
src/db/: db.ts
src/directives/: copy.ts
src/locales/: i18n.ts
src/model/: model.ts
src/pet/: BubbleApp.vue  PetApp.vue  bubbleMain.ts  bubbleTypes.ts  bubbleWindow.ts  hostBridge.ts  index.ts  intro.ts  lines.ts  main.ts  motions.ts  personality.ts  pet-bubble.html  pet.html  petWindow.ts  screenFly.ts  settings.ts  sizes.ts  toonAnim.ts  trailStyles.ts  types.ts  usbFormat.ts  usbWatch.ts  vrmPoses.ts  vrmStorage.ts
src/pet/models/: PetChipModel.vue  PetFigSciModel.vue  PetMeteorTrail.vue  PetPreviewOrbit.vue  PetToonModel.vue  PetVrmModel.vue  index.ts
src/pet/scripts/: fig-knockout.cjs
src/pet/skins/: forms.ts  index.ts  themes.ts  types.ts
src/router/: index.ts  menu.ts  routes.ts  types.ts
src/stores/: FirmwareList.ts  Tool.ts  Tools.ts  device.ts  espflash.ts  fontHistory.ts  history.ts  partitionTable.ts  port.ts  update.ts
src/types/: lv_font_conv.d.ts  serial.ts
src/utils/: ESPTool.ts  balanced-match.ts  bus.ts  cli.ts  common.ts  datetime.ts  esptool.ts  esptoolChip.ts  esptoolCli.ts  esptoolDevice.ts  esptoolErase.ts  esptoolLock.ts  esptoolRead.ts  esptoolVersion.ts  esptoolWrite.ts  model.ts  nvs.ts  otadata.ts  partitionBin.ts  partitionChart.ts  partitionDeviceRead.ts  partitionDeviceTable.ts  partitionTable.ts  partitionTableFormat.ts  path.ts  sjpgEncoder.ts  store.ts  tempWorkDir.ts  terminalLog.ts  tools-config.ts  updateCheck.ts  ws.ts
src/utils/audio/: formatDuration.ts  index.ts
src/utils/eaf/: index.ts
src/views/: Home.vue
(+162 files in other folders)
