[package]
name = "wheat-esp-tools"
version = "0.0.0"
description = "wheat-esp-tools"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "protocol-asset", "window-maximize", "window-create", "window-set-title", "dialog-all", "fs-all", "os-all", "path-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.0"
bincode = "1.3.3"
anyhow = "1.0.69"
regex = "1.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
# debug = true
# debug-assertions = true
