[package]
name = "wheat-esp-tools"
version = "0.0.1"
description = "Wheat ESP Tools"
authors = ["wheat <vaemc520@qq.com>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serialport = "4.2.0"
btleplug = "0.12.0"
tokio = { version = "1.32.0", features = ["rt", "sync", "time", "macros"] }
futures = "0.3.28"
esp-nvs-partition-tool = "0.1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png"] }
color_quant = "2.0.0"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Devices_Enumeration",
    "Foundation",
    "Foundation_Collections",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_WinRT",
] }
windows-collections = "0.3.2"

[profile.release.package.wry]
# debug = true
# debug-assertions = true
